--- a/frontEnd/employeemanagement/angular.json
+++ b/frontEnd/employeemanagement/angular.json
@@ -71,7 +71,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
+          "options": {
+            "browserTarget": "move-safe:build",
+            "proxyConfig": "src/proxy.conf.json"
+          }  
+          ,"configurations": {
             "production": {
               "buildTarget": "employeemanagement:build:production"
             },
